--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
-        <div>Hello React</div>
-        <script type="module"  src="index.js"></script>
+        <div id="root">Hello React</div>
+        <script type="module"  src="./src/component/index.js"></script>
     </body>
 
 </html>
